@@ -1,3 +1,3 @@
-jar {
-    manifest.attributes 'Build-Name': archivesBaseName
+dependencies {
+    compile 'cn.featherfly:featherfly-conversion-jdk8:1.0.0'
 }
