@@ -1,5 +1,5 @@
-sourceCompatibility=1.7  
-targetCompatibility=1.7  
+sourceCompatibility=1.8  
+targetCompatibility=1.8  
 group=cn.featherfly
 groupId=cn.featherfly
 version=1.4.3
