@@ -1,6 +1,7 @@
-2019-
+2019-07-31
 1.4.3
-    1.ConstantPool加入getConstantParameter()方法 
+    1.ConstantPool加入getConstantParameter()方法
+    2.ConstantConfigurator加入config()方法 
     
 2019-07-31
 1.4.2
